--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,6 @@ testcontainers-rabbitmq = { group = 'org.testcontainers', name = 'rabbitmq', ver
 io-github-sercasti-spring-httpserver-timings = { group = 'io.github.sercasti', name = 'spring-httpserver-timings', version = '0.0.7' }
 org-mapstruct-mapstruct =  { group = 'org.mapstruct', name = 'mapstruct', version.ref = 'mapstruct' }
 org-mapstruct-mapstruct-processor =  { group = 'org.mapstruct', name = 'mapstruct-processor', version.ref = 'mapstruct' }
-com-breinify = { group = 'com.breinify', name = 'brein-time-utilities',  version = '1.7.0' }
 org-junit-jupiter-engine = {  group = 'org.junit.jupiter', name = 'junit-jupiter-engine', version = '5.8.1' }
 #org-hamcrest-all = {  group = 'org.hamcrest', name = 'hamcrest-all', version = '1.3' }
 org-hamcrest = {  group = 'org.hamcrest', name = 'hamcrest', version = '2.2' }
@@ -22,6 +21,7 @@ org-hamcrest-library = {  group = 'org.hamcrest', name = 'hamcrest-library', ver
 spring-boot-devtools = { module = 'org.springframework.boot:spring-boot-devtools' }
 spring-context = { module = 'org.springframework:spring-context' }
 spring-boot-starter-web = { module = 'org.springframework.boot:spring-boot-starter-web' }
+spring-boot-starter-actuator = { module = 'org.springframework.boot:spring-boot-starter-actuator' }
 spring-boot-starter-test = { module = 'org.springframework.boot:spring-boot-starter-test' }
 spring-boot-starter-data-jpa = { module = 'org.springframework.boot:spring-boot-starter-data-jpa' }
 spring-boot-starter-data-rest = { module = 'org.springframework.boot:spring-boot-starter-data-rest' }
@@ -36,6 +36,13 @@ springdoc-openapi-starter-webmvc-api = { group = 'org.springdoc', name = 'spring
 com-newrelic-agent-java = { group = 'com.newrelic.agent.java', name = 'newrelic-agent', version = '8.0.0' }
 io-honeycomb-opentelemetry-javaagent = { group = 'io.honeycomb', name = 'honeycomb-opentelemetry-javaagent', version = '1.5.2' }
 opentelemetry-javaagent = { group = 'io.opentelemetry.javaagent', name = 'opentelemetry-javaagent', version = '1.31.0' }
+opentelemetry-annotations = { group = 'io.opentelemetry.instrumentation', name = 'opentelemetry-instrumentation-annotations', version = '1.31.0' }
+micrometer-tracing-bom = { group = 'io.micrometer', name = 'micrometer-tracing-bom', version = 'latest.release' }
+micrometer-tracing = { module = 'io.micrometer:micrometer-tracing' }
+micrometer-tracing-bridge-otel = { module = 'io.micrometer:micrometer-tracing-bridge-otel' }
+micrometer-registry-prometheus = { module ='io.micrometer:micrometer-registry-prometheus' }
+logback-classic = { group = 'ch.qos.logback', name = 'logback-classic', version = '1.2.9' }
+logstash-logback-encoder = { group = 'net.logstash.logback', name = 'logstash-logback-encoder', version = '6.6' }
 
 [bundles]
 testcontainers = [
